--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset ="utf-8">
+    <meta charset ="utf-8"name="google-site-verification" content="KEHJB5GJAAYPMTDCpj62ZlijAqebHBsWF8SfQEJyTaM" />
     <title>MY SEC pratice Site</title>
   </head>
-  <meta>
   <h1> welcome to my github SEO test website </h1>
   <p>This is a live website created for practing google search console add anyytics..</p>
 </html>
